--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
     padding: 28px 32px;
     overflow: hidden;
     border-radius: 18px;
-    font-family: 'Roboto' sans-serif;
+    font-family: 'Roboto', sans-serif;
     transition: 0.6s ease-out;
 }
 
@@ -96,7 +96,7 @@ body {
     font-size: 1.5rem;
 }
 
-.box-clima .temperatura .descricao{
+.box-clima .descricao{
     font-size: 22px;
     font-weight: 500;
     text-transform: capitalize;
