--- a/style.css
+++ b/style.css
@@ -79,6 +79,9 @@ body {
 .box-clima img{
     width: 60%;
     margin-top: 30px;
+    background-color: #277DD9;
+    opacity: 70%;
+    border-radius: 50%;
 }
 
 .box-clima .temperatura{
