--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 .container {
     position: relative;
     width: 400px;
-    height: 105px;
+    height: 100px;
     background: #fff;
     padding: 28px 32px;
     overflow: hidden;
@@ -109,49 +109,29 @@ body {
     width: 100%;
     display: flex;
     justify-content: space-between;
-    margin-top: 0px;
-}
-
-.detalhes-clima .humidade, .detalhes-clima .ventos{
-    display: flex;
-    align-items: center;
-    width: 500px;
-    height: 100px;
-}
-
-.detalhes-clima .humidade{
-    padding-left: 20px;
-    justify-content: flex-start;
-}
-
-.detalhes-clima .ventos{
-    padding-right: 20px;
-    justify-content: flex-end;
+    margin-top: 30px;
+    background: #DFF6FF;
+    border-radius: 10%;
+    padding: 10px;
 }
 
 .detalhes-clima i{
     color: #06283D;
-    font-size: 26px;
-    margin-right: 10px;
-    margin-top: 6px;
+    font-size: 20px;
+    margin-right: 0px;
 }
 
 .detalhes-clima span{
     color: #06283D;
     font-size: 20px;
     font-weight: 500;
-}
-
-.detalhes-clima p{
-    color: #06283D;
-    font-size: 14px;
-    font-weight: 500;
+    margin: 0px;
 }
 
 .info-local{
     width: 100%;
     justify-content: center;
-    margin-top: 20px;
+    margin-top: 10px;
 }
 
 .info-local .local{
