--- a/style.css
+++ b/style.css
@@ -109,7 +109,7 @@ body {
     width: 100%;
     display: flex;
     justify-content: space-between;
-    margin-top: 30px;
+    margin-top: 20px;
     background: #DFF6FF;
     border-radius: 10%;
     padding: 10px;
@@ -150,6 +150,11 @@ body {
     font-size: 20px;
     font-weight: 500;
     margin-top: 5px;
+}
+
+.info-local .data-hora{
+    font-size: 18px;
+    margin-top: 10px;
 }
 
 .not-found{
