--- a/style.css
+++ b/style.css
@@ -100,6 +100,7 @@ body {
 }
 
 .box-clima .descricao{
+    color: #06283D;
     font-size: 22px;
     font-weight: 500;
     text-transform: capitalize;
